tests/baselines/reference/parserGenericsInVariableDeclaration1.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(1,9): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(1,13): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(2,9): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(2,13): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(4,9): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(4,13): error TS2304: Cannot find name 'Bar'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(4,17): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(5,9): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(5,13): error TS2304: Cannot find name 'Bar'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(5,17): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(7,9): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(7,13): error TS2304: Cannot find name 'Bar'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(7,17): error TS2304: Cannot find name 'Quux'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(7,22): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(8,9): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(8,13): error TS2304: Cannot find name 'Bar'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(8,17): error TS2304: Cannot find name 'Quux'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(8,22): error TS2304: Cannot find name 'T'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts (18 errors) ====
    var v : Foo<T> = 1;
            ~~~
!!! error TS2304: Cannot find name 'Foo'.
                ~
!!! error TS2304: Cannot find name 'T'.
    var v : Foo<T>= 1;
            ~~~
!!! error TS2304: Cannot find name 'Foo'.
                ~
!!! error TS2304: Cannot find name 'T'.
    
    var v : Foo<Bar<T>> = 1;
            ~~~
!!! error TS2304: Cannot find name 'Foo'.
                ~~~
!!! error TS2304: Cannot find name 'Bar'.
                    ~
!!! error TS2304: Cannot find name 'T'.
    var v : Foo<Bar<T>>= 1;
            ~~~
!!! error TS2304: Cannot find name 'Foo'.
                ~~~
!!! error TS2304: Cannot find name 'Bar'.
                    ~
!!! error TS2304: Cannot find name 'T'.
    
    var v : Foo<Bar<Quux<T>>> = 1;
            ~~~
!!! error TS2304: Cannot find name 'Foo'.
                ~~~
!!! error TS2304: Cannot find name 'Bar'.
                    ~~~~
!!! error TS2304: Cannot find name 'Quux'.
                         ~
!!! error TS2304: Cannot find name 'T'.
    var v : Foo<Bar<Quux<T>>>= 1;
            ~~~
!!! error TS2304: Cannot find name 'Foo'.
                ~~~
!!! error TS2304: Cannot find name 'Bar'.
                    ~~~~
!!! error TS2304: Cannot find name 'Quux'.
                         ~
!!! error TS2304: Cannot find name 'T'.